--- a/blog.html
+++ b/blog.html
@@ -59,7 +59,7 @@
         <p>Tony Stark</p>
         <nav>
             <ul>
-        <li><a href="bio.html">Sobre mim</a></li>
+        <li><a href="index.html">Sobre mim</a></li>
         <li><a href="blog.html">Blog</a></li>
             </ul>
         </nav>
